force-app/main/default/objects/Resource_Task__c/Resource_Task__c.object-meta.xml
<CustomObject>
    <label>Your Tasks</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Your Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>