force-app/main/default/objects/Resource_Task__c/fields/Allocated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Hours__c</fullName>
    <label>Allocated Hours</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>