force-app/main/default/objects/Resource_Task__c/fields/Project_Assigned_Resource__c.field-meta.xml
<CustomField>
    <fullName>Project_Assigned_Resource__c</fullName>
    <label>Project Assigned Resource</label>
    <referenceTo>Project_Assigned_Resource__c</referenceTo>
    <relationshipLabel>Resource Tasks</relationshipLabel>
    <relationshipName>Resource_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>